--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div>
         <div id="task2">
             <h2> Task : 2</h2>
-            <table >
+            <table id="table_task2">
                 <tr id="heading">
                     <th>FirstName </th>
                     <th>LasttName </th>
